--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_top_bar.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_top_bar.xml
@@ -181,5 +181,24 @@
                 android:textSize="28px"/>
 
         </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/rlLowWalletBalance"
+            android:layout_width="match_parent"
+            android:layout_height="95px"
+            android:layout_below="@+id/relativeLayoutBatteryLow"
+            android:background="@color/red_ticket_status"
+            android:visibility="visible">
+
+            <TextView
+                android:id="@+id/tvLowWalletBalance"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_centerInParent="true"
+                android:text="@string/alert_low_wallet_balance"
+                android:textColor="@color/white"
+                android:textSize="28px"/>
+
+        </RelativeLayout>
     </RelativeLayout>
 </RelativeLayout>
