--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_support_options.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_support_options.xml
@@ -16,4 +16,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <RelativeLayout
+        android:id="@+id/relativeLayoutContainerEarnings"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:background="@color/white">
+    </RelativeLayout>
+
 </LinearLayout>
