--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_top_bar.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_top_bar.xml
@@ -37,6 +37,13 @@
             android:tag="@string/dont_touch_me"
             android:textSize="22sp"/>
 
+        <!--<include layout="@layout/layout_switch_slide"-->
+            <!--android:layout_width="150dp"-->
+            <!--android:layout_height="25dp"-->
+            <!--android:visibility="gone"-->
+            <!--android:layout_centerInParent="true"-->
+            <!--/>-->
+
        <android.support.v7.widget.CardView
            android:layout_margin="10dp"
            app:cardCornerRadius="17dp"
