--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_switch_slide.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_switch_slide.xml
@@ -1,78 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/containerSwitch"
-    android:layout_width="150dp"
-    android:layout_height="35dp">
-    <!--<RelativeLayout-->
-        <!--android:id="@+id/viewSlide"-->
-        <!--android:layout_margin="2dp"-->
-        <!--android:layout_width="74dp"-->
-        <!--android:layout_height="33dp"-->
-        <!--android:layout_centerVertical="true"-->
-        <!--android:background="@drawable/selector_red_stroke_white_theme"/>-->
+    android:layout_width="180dp"
+    android:layout_height="50dp">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/switchContainer">
-
-    <LinearLayout
-        android:id="@+id/rlOnOff"
+    <android.support.v7.widget.CardView
+        android:layout_margin="10dp"
+        app:cardCornerRadius="17dp"
+        app:cardElevation="5dp"
+        android:visibility="visible"
+        android:tag="@string/dont_touch_me"
+        android:layout_centerInParent="true"
         android:layout_width="match_parent"
-        android:background="@drawable/selector_red_stroke_white_theme"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:layout_centerInParent="true">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tvOfflineTop"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
-            android:textColor="@drawable/selector_dark_white_text_color"
-            android:layout_marginBottom="2dp"
-            android:background="@drawable/selector_red_theme_rounded"
-            android:fontFamily="@font/maven_pro_regular"
-            android:paddingEnd="10dp"
-            android:textSize="12sp"
-            android:paddingStart="10dp"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
-            android:singleLine="true"
-            android:text="@string/offline_caps"/>
+            android:id="@+id/switchContainer">
 
-        <TextView
-            android:id="@+id/tvOnlineTop"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@drawable/selector_green_theme_rounded"
-            android:textColor="@drawable/selector_dark_white_text_color"
-            android:fontFamily="@font/maven_pro_regular"
-            android:text="@string/online_caps"
-            android:layout_marginEnd="2dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginBottom="2dp"
-            android:gravity="center"
-            android:textSize="12sp"
-            android:paddingEnd="10dp"
-            android:paddingStart="10dp"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
-            android:singleLine="true"
-            android:layout_weight="1"/>
+            <RelativeLayout
+                android:id="@+id/viewSlide"
+                android:layout_margin="2dp"
+                android:layout_width="74dp"
+                android:layout_height="33dp"
+                android:layout_centerVertical="true"
+                android:background="@color/red_offline"/>
 
-    </LinearLayout>
-    <RelativeLayout
-        android:id="@+id/viewSlide"
-        android:layout_margin="2dp"
-        android:layout_width="74dp"
-        android:layout_height="33dp"
-        android:layout_centerVertical="true"
-        android:background="@drawable/selector_red_stroke_white_theme"/>
+            <LinearLayout
+                android:id="@+id/rlOnOff"
+                android:layout_width="match_parent"
+                android:tag="@string/dont_touch_me"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                >
+
+                <TextView
+                    android:id="@+id/tvOfflineTop"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="2dp"
+                    android:textColor="@drawable/selector_dark_white_text_color"
+                    android:layout_marginBottom="2dp"
+                    android:paddingEnd="10dp"
+                    android:textSize="15sp"
+                    android:paddingStart="10dp"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
+                    android:singleLine="true"
+                    android:text="@string/offline_caps"/>
+
+                <TextView
+                    android:id="@+id/tvOnlineTop"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textColor="@drawable/selector_dark_white_text_color"
+                    android:text="@string/online_caps"
+                    android:layout_marginEnd="2dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="2dp"
+                    android:gravity="center_vertical"
+                    android:textSize="15sp"
+                    android:paddingEnd="10dp"
+                    android:paddingStart="10dp"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
+                    android:singleLine="true"
+                    android:layout_weight="1"/>
+
+            </LinearLayout>
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
-</RelativeLayout>
+
