--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/selector_green_theme_rounded.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/selector_green_theme_rounded.xml
@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <item android:state_selected="false">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
-            <corners android:radius="50dp"/>
-        </shape>
-    </item>
-
-    <item android:state_selected="true">
+    <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/green_online"/>
             <corners android:radius="50dp"/>
