--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/selector_red_stroke_white_theme.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/selector_red_stroke_white_theme.xml
@@ -3,7 +3,7 @@
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/transparent"/>
             <corners android:radius="50dp"/>
             <stroke android:width="1dp"
                 android:color="@color/red_dark_alpha"/>
@@ -13,7 +13,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/transparent"/>
             <corners android:radius="50dp"/>
             <stroke android:width="1dp"
                 android:color="@color/red_offline"/>
