--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_switch_slide.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_switch_slide.xml
@@ -4,78 +4,88 @@
     android:id="@+id/containerSwitch"
     android:layout_width="180dp"
     android:layout_height="50dp">
+    <!--<RelativeLayout-->
+    <!--android:id="@+id/viewSlide"-->
+    <!--android:layout_margin="2dp"-->
+    <!--android:layout_width="74dp"-->
+    <!--android:layout_height="33dp"-->
+    <!--android:layout_centerVertical="true"-->
+    <!--android:background="@drawable/selector_red_stroke_white_theme"/>-->
+
 
     <android.support.v7.widget.CardView
-        android:layout_margin="10dp"
-        app:cardCornerRadius="17dp"
-        app:cardElevation="5dp"
-        android:visibility="visible"
-        android:tag="@string/dont_touch_me"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_margin="10dp"
+        android:tag="@string/dont_touch_me"
+        android:visibility="visible"
+        app:cardCornerRadius="17dp"
+        app:cardElevation="5dp">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/switchContainer">
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+        <RelativeLayout
+            android:id="@+id/switchContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
             <RelativeLayout
                 android:id="@+id/viewSlide"
-                android:layout_margin="2dp"
                 android:layout_width="74dp"
                 android:layout_height="33dp"
                 android:layout_centerVertical="true"
-                android:background="@color/red_offline"/>
+                android:layout_margin="2dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:background="@color/red_offline" />
 
             <LinearLayout
                 android:id="@+id/rlOnOff"
-                android:layout_width="match_parent"
-                android:tag="@string/dont_touch_me"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                >
+                android:tag="@string/dont_touch_me">
 
                 <TextView
                     android:id="@+id/tvOfflineTop"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:layout_weight="1"
                     android:layout_marginStart="2dp"
                     android:layout_marginTop="2dp"
-                    android:textColor="@drawable/selector_dark_white_text_color"
                     android:layout_marginBottom="2dp"
-                    android:paddingEnd="10dp"
-                    android:textSize="15sp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
                     android:paddingStart="10dp"
                     android:paddingTop="2dp"
+                    android:paddingEnd="10dp"
                     android:paddingBottom="2dp"
                     android:singleLine="true"
-                    android:text="@string/offline_caps"/>
+                    android:text="@string/offline_caps"
+                    android:textColor="@drawable/selector_dark_white_text_color"
+                    android:textSize="15sp" />
 
                 <TextView
                     android:id="@+id/tvOnlineTop"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:textColor="@drawable/selector_dark_white_text_color"
-                    android:text="@string/online_caps"
-                    android:layout_marginEnd="2dp"
                     android:layout_marginTop="2dp"
+                    android:layout_marginEnd="2dp"
                     android:layout_marginBottom="2dp"
+                    android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:textSize="15sp"
-                    android:paddingEnd="10dp"
                     android:paddingStart="10dp"
                     android:paddingTop="2dp"
+                    android:paddingEnd="10dp"
                     android:paddingBottom="2dp"
                     android:singleLine="true"
-                    android:layout_weight="1"/>
+                    android:text="@string/online_caps"
+                    android:textColor="@drawable/selector_dark_white_text_color"
+                    android:textSize="15sp" />
 
             </LinearLayout>
-
+        </RelativeLayout>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
-
 </RelativeLayout>
-
