--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_referals.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_referals.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ReferalsFragment">
 
     <LinearLayout
@@ -45,6 +45,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvReferralTasks"
         android:layout_width="match_parent"
+        tools:listItem="@layout/item_refer_task"
         app:layout_constraintTop_toBottomOf="@id/llTasksState"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_height="0dp"/>
