--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_switch_slide.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_switch_slide.xml
@@ -33,13 +33,12 @@
 
             <RelativeLayout
                 android:id="@+id/viewSlide"
-                android:layout_width="74dp"
+                android:layout_width="80dp"
                 android:layout_height="33dp"
                 android:layout_centerVertical="true"
                 android:layout_margin="2dp"
                 android:clickable="true"
-                android:focusable="true"
-                android:background="@color/red_offline" />
+                android:focusable="true" />
 
             <LinearLayout
                 android:id="@+id/rlOnOff"
@@ -60,6 +59,7 @@
                     android:paddingStart="10dp"
                     android:paddingTop="2dp"
                     android:paddingEnd="10dp"
+                    android:minWidth="80dp"
                     android:paddingBottom="2dp"
                     android:singleLine="true"
                     android:text="@string/offline_caps"
@@ -74,6 +74,7 @@
                     android:layout_marginEnd="2dp"
                     android:layout_marginBottom="2dp"
                     android:layout_weight="1"
+                    android:minWidth="80dp"
                     android:gravity="center_vertical"
                     android:paddingStart="10dp"
                     android:paddingTop="2dp"
