--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/item_refer_task.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/item_refer_task.xml
@@ -22,6 +22,7 @@
         android:gravity="center"
         app:layout_constraintVertical_bias="0.1"
         android:minWidth="100dp"
+        android:maxWidth="105dp"
         android:layout_margin="15dp"
         android:paddingTop="5dp"
         android:paddingEnd="10dp"
