--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_top_bar.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_top_bar.xml
@@ -103,7 +103,7 @@
             android:id="@+id/checkServerBtn"
             android:layout_width="82px"
             android:layout_height="82px"
-            android:layout_toStartOf="@id/containerSwitch"
+            android:layout_toEndOf="@id/menuBtn"
             android:layout_centerVertical="true"
             android:background="@drawable/transparent"
             android:longClickable="true"/>
