--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_referals.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_referals.xml
@@ -24,6 +24,7 @@
             android:layout_height="wrap_content"
             android:minHeight="60dp"
             android:maxHeight="100dp"
+            android:background="?android:selectableItemBackground"
             style="@style/TextMedium"
             tools:text="Hello"
             android:gravity="center"
@@ -34,6 +35,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:minHeight="60dp"
+            android:background="?android:selectableItemBackground"
             android:maxHeight="100dp"
             style="@style/TextMedium"
             tools:text="Hello"
