--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/item_refer_task.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/item_refer_task.xml
@@ -12,34 +12,35 @@
     android:layout_width="match_parent"
     android:paddingStart="10dp"
     android:paddingTop="10dp"
+    android:paddingEnd="10dp"
     android:paddingBottom="10dp"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tvStatus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="@style/TextMedium"
-        tools:text="@string/pending"
-        android:paddingBottom="5dp"
-        android:gravity="center"
-        android:minWidth="100dp"
-        android:maxWidth="105dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:paddingTop="5dp"
-        android:paddingEnd="10dp"
-        android:paddingStart="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+    <!--<TextView-->
+        <!--android:id="@+id/tvStatus"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--style="@style/TextMedium"-->
+        <!--tools:text="@string/pending"-->
+        <!--android:paddingBottom="5dp"-->
+        <!--android:gravity="center"-->
+        <!--android:minWidth="100dp"-->
+        <!--android:maxWidth="105dp"-->
+        <!--android:layout_marginStart="10dp"-->
+        <!--android:layout_marginEnd="10dp"-->
+        <!--android:paddingTop="5dp"-->
+        <!--android:paddingEnd="10dp"-->
+        <!--android:paddingStart="10dp"-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent" />-->
 
     <android.support.constraint.Guideline
         android:id="@+id/guideVertical"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="135dp" />
+        app:layout_constraintGuide_begin="150dp" />
     
     <TextView
         android:id="@+id/tvDriverName"
@@ -66,7 +67,7 @@
         android:singleLine="true"
         app:layout_constrainedWidth="true"
         app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintEnd_toStartOf="@id/tvStatus"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="5dp"
         tools:text="Hello"
         app:layout_constraintStart_toStartOf="@id/guideVertical"/>
@@ -104,7 +105,7 @@
         android:layout_marginEnd="5dp"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constrainedWidth="true"
-        app:layout_constraintEnd_toStartOf="@id/tvStatus"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvDriverNameValue"
         app:layout_constraintStart_toStartOf="@id/guideVertical"/>
 
@@ -141,7 +142,7 @@
         android:layout_marginEnd="5dp"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constrainedWidth="true"
-        app:layout_constraintEnd_toStartOf="@id/tvStatus"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvDriverNoValue"
         app:layout_constraintStart_toStartOf="@id/guideVertical"/>
 
@@ -178,7 +179,7 @@
         android:layout_marginEnd="5dp"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constrainedWidth="true"
-        app:layout_constraintEnd_toStartOf="@id/tvStatus"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvTotalMoneyValue"
         app:layout_constraintStart_toStartOf="@id/guideVertical"/>
 
@@ -215,7 +216,7 @@
         android:layout_marginEnd="5dp"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constrainedWidth="true"
-        app:layout_constraintEnd_toStartOf="@id/tvStatus"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvTotalCreditsValue"
         app:layout_constraintStart_toStartOf="@id/guideVertical"/>
 
@@ -252,7 +253,7 @@
         android:layout_marginEnd="5dp"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constrainedWidth="true"
-        app:layout_constraintEnd_toStartOf="@id/tvStatus"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvMoneyProcessedValue"
         app:layout_constraintStart_toStartOf="@id/guideVertical"/>
 
@@ -289,7 +290,7 @@
         app:layout_constraintHorizontal_bias="0"
         android:layout_marginEnd="5dp"
         app:layout_constrainedWidth="true"
-        app:layout_constraintEnd_toStartOf="@id/tvStatus"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvCreditsProcessedValue"
         app:layout_constraintStart_toStartOf="@id/guideVertical"/>
 
@@ -298,6 +299,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:constraint_referenced_ids="tvTotalTargets,tvTotalTargetsValue"/>
+
+    <TextView
+        android:id="@+id/tvStatus2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/TextMedium"
+        tools:text="@string/pending"
+        android:paddingBottom="5dp"
+        android:gravity="center"
+        android:minWidth="100dp"
+        android:maxWidth="105dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:padding="10dp"
+        app:layout_constraintTop_toBottomOf="@id/tvTotalTargetsValue"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
