--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_home.xml
@@ -95,6 +95,9 @@
                     <!-- initial layout-->
                     <include layout="@layout/layout_driver_initial"/>
 
+                    <!-- initial layout requests-->
+                    <include layout="@layout/layout_driver_initial_requests"/>
+
                 </RelativeLayout>
 
                 <include layout="@layout/layout_home_sliding_menu"/>
