--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_requests.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_requests.xml
@@ -4,78 +4,94 @@
     android:layout_width="match_parent"
     android:layout_height="105dp"
     android:layout_marginTop="10dp"
-    android:background="#e1e2e1"
-    android:layout_marginEnd="13.9dp">
+    android:background="#e1e2e1">
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingTop="14.4dp"
-    android:paddingStart="13.9dp"
-    android:paddingEnd="13.9dp"
-    android:paddingBottom="14.5dp"
-    android:background="@color/white">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:paddingStart="14dp"
+        android:paddingTop="15dp"
+        android:paddingEnd="14dp"
+        android:paddingBottom="15dp">
+
+        <ImageView
+            android:id="@+id/ivImage"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_profile_img_placeholder" />
+
+        <TextView
+            android:id="@+id/tvName"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/ivImage"
+            android:gravity="center"
+            android:text="Mohit"
+            android:textSize="10sp" />
+
+        <TextView
+            android:id="@+id/tvPickup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="13dp"
+            android:layout_toEndOf="@+id/ivImage"
+            android:text="Alchemist Hospital Panchkula"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/tvDrop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvPickup"
+            android:layout_marginStart="13dp"
+            android:layout_toEndOf="@+id/ivImage"
+            android:text="M S Enclave (Panchkula, Dhakoli)"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/tvTime"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvName"
+            android:gravity="center"
+            android:text="10 min"
+            android:textSize="9sp" />
+
+        <TextView
+            android:id="@+id/tvDistance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvDrop"
+            android:layout_marginStart="6dp"
+            android:layout_marginTop="16dp"
+            android:layout_toEndOf="@+id/tvPrice"
+            android:text="2.7km"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/tvPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvDrop"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="13dp"
+            android:layout_toEndOf="@+id/ivImage"
+            android:text="143"
+            android:textColor="@color/themeColor"
+            android:textSize="16sp" />
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="30dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true"
+        android:background="#ff5b29">
+
     <ImageView
-        android:id="@+id/ivImage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/placeholder" />
-
-    <TextView
-        android:id="@+id/tvName"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:text="Mohit"
-        android:textSize="10sp"
-        android:gravity="center"
-        android:layout_below="@+id/ivImage"/>
-
-    <TextView
-        android:id="@+id/tvAddressHeading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="13dp"
-        android:text="Alchemist Hospital Panchkula"
-        android:textSize="16sp"
-        android:layout_toEndOf="@+id/ivImage"/>
-    <TextView
-        android:id="@+id/tvAddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvAddressHeading"
-        android:layout_toEndOf="@+id/ivImage"
-        android:layout_marginStart="13dp"
-        android:textSize="12sp"
-        android:text="M S Enclave (Panchkula, Dhakoli)"/>
-    <TextView
-        android:id="@+id/tvTime"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvName"
-        android:gravity="center"
-        android:textSize="9sp"
-        android:text="10 min"/>
-    <TextView
-        android:id="@+id/tvDistance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5.7dp"
-        android:layout_marginTop="15.8dp"
-        android:layout_toEndOf="@+id/tvPrice"
-        android:layout_below="@+id/tvAddress"
-        android:textSize="12sp"
-        android:text="2.7km"/>
-    <TextView
-        android:id="@+id/tvPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="13.3dp"
-        android:layout_marginStart="9.6dp"
-        android:textColor="@color/themeColor"
-        android:layout_below="@+id/tvAddress"
-        android:layout_toEndOf="@+id/ivImage"
-        android:textSize="16sp"
-        android:text="143"/>
-</RelativeLayout>
-
+        android:layout_width="11dp"
+        android:layout_height="18dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/ic_left_swipe_arrow" />
+    </RelativeLayout>
 </RelativeLayout>
