--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_requests.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_requests.xml
@@ -35,6 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="13dp"
+            android:ellipsize="end"
             android:layout_toEndOf="@+id/ivImage"
             android:text="Alchemist Hospital Panchkula"
             android:textSize="16sp" />
@@ -46,6 +47,7 @@
             android:layout_below="@+id/tvPickup"
             android:layout_marginStart="13dp"
             android:layout_toEndOf="@+id/ivImage"
+            android:ellipsize="end"
             android:text="M S Enclave (Panchkula, Dhakoli)"
             android:textSize="12sp" />
 
@@ -83,6 +85,7 @@
 
     </RelativeLayout>
     <RelativeLayout
+        android:id="@+id/rlAcceptView"
         android:layout_width="30dp"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
