--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
@@ -335,139 +335,149 @@
             />
 
 
-        <RelativeLayout
-            android:id="@+id/relativeLayoutDriverReferralHeading"
-            android:layout_width="match_parent"
-            android:tag="@string/dont_touch_me"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp">
-
-            <TextView
-                android:id="@+id/textViewReferral"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="@string/referral_rate"
-                android:textColor="@color/themeColor"
-                android:textSize="20sp"
-            />
-
-        </RelativeLayout>
-
-
         <LinearLayout
-            android:id="@+id/linearLayoutDriverReferral"
+            android:id="@+id/llReferralInfo"
             android:layout_width="match_parent"
-            android:layout_height="250px"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:visibility="visible">
+            >
+
+
+            <RelativeLayout
+                android:id="@+id/relativeLayoutDriverReferralHeading"
+                android:layout_width="match_parent"
+                android:tag="@string/dont_touch_me"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:id="@+id/textViewReferral"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:text="@string/referral_rate"
+                    android:textColor="@color/themeColor"
+                    android:textSize="20sp"
+                    />
+
+            </RelativeLayout>
+
 
             <LinearLayout
+                android:id="@+id/linearLayoutDriverReferral"
                 android:layout_width="match_parent"
-                android:layout_height="90px"
-                android:orientation="horizontal">
+                android:layout_height="250px"
+                android:orientation="vertical"
+                android:visibility="visible">
 
-                <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
-                    android:id="@+id/textViewDtoC"
-                    android:layout_width="0px"
-                    android:layout_height="48px"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="@string/driver_to_customer"
-                    android:textColor="@color/textColor"
-                    android:textSize="34px"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="90px"
+                    android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/imageViewHorizontal7"
-                    android:layout_width="12px"
-                    android:layout_height="12px"
-                    android:layout_gravity="bottom"
-                    android:src="@drawable/ring_orange_dark"/>
+                    <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                        android:id="@+id/textViewDtoC"
+                        android:layout_width="0px"
+                        android:layout_height="48px"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/driver_to_customer"
+                        android:textColor="@color/textColor"
+                        android:textSize="34px"/>
 
-                <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
-                    android:id="@+id/textViewDtoD"
-                    android:layout_width="0px"
-                    android:layout_height="48px"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="@string/driver_to_driver"
-                    android:textColor="@color/textColor"
-                    android:textSize="34px"/>
+                    <ImageView
+                        android:id="@+id/imageViewHorizontal7"
+                        android:layout_width="12px"
+                        android:layout_height="12px"
+                        android:layout_gravity="bottom"
+                        android:src="@drawable/ring_orange_dark"/>
 
+                    <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                        android:id="@+id/textViewDtoD"
+                        android:layout_width="0px"
+                        android:layout_height="48px"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/driver_to_driver"
+                        android:textColor="@color/textColor"
+                        android:textSize="34px"/>
+
+
+                </LinearLayout>
+
+                <!--<ImageView-->
+                <!--android:layout_width="670px"-->
+                <!--android:layout_height="2px"-->
+                <!--android:layout_gravity="center_horizontal"-->
+                <!--android:background="@color/grey_dark_less"/>-->
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="100px"
+                    android:layout_gravity="center"
+                    android:background="@color/white">
+
+                    <TextView
+                        android:id="@+id/textViewDtoCValue"
+                        android:layout_width="0px"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/NA"
+                        android:textColor="@color/textColor"
+                        android:textSize="34px"/>
+
+                    <TextView
+                        android:id="@+id/textViewDtoDValue"
+                        android:layout_width="0px"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/NA"
+                        android:textColor="@color/textColor"
+                        android:textSize="34px"/>
+
+                </LinearLayout>
 
             </LinearLayout>
 
-            <!--<ImageView-->
-            <!--android:layout_width="670px"-->
-            <!--android:layout_height="2px"-->
-            <!--android:layout_gravity="center_horizontal"-->
-            <!--android:background="@color/grey_dark_less"/>-->
 
-            <LinearLayout
+            <RelativeLayout
+                android:id="@+id/relativeLayoutDriverReferralSingle"
                 android:layout_width="match_parent"
-                android:layout_height="100px"
-                android:layout_gravity="center"
-                android:background="@color/white">
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40px"
+                android:layout_marginEnd="50px"
+                android:layout_marginTop="20px"
+                android:gravity="center_vertical"
+                android:visibility="gone">
 
                 <TextView
-                    android:id="@+id/textViewDtoCValue"
-                    android:layout_width="0px"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="@string/NA"
+                    android:id="@+id/textViewDriverReferral"
+                    android:layout_width="480px"
+                    android:layout_height="48px"
+                    android:text="@string/pickup_charges"
                     android:textColor="@color/textColor"
                     android:textSize="34px"/>
 
+
                 <TextView
-                    android:id="@+id/textViewDtoDValue"
-                    android:layout_width="0px"
+                    android:id="@+id/textViewDriverReferralValue"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="@string/NA"
+                    android:layout_alignParentEnd="true"
+                    android:text="00"
                     android:textColor="@color/textColor"
                     android:textSize="34px"/>
 
-            </LinearLayout>
-
+            </RelativeLayout>
         </LinearLayout>
 
-
-        <RelativeLayout
-            android:id="@+id/relativeLayoutDriverReferralSingle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="40px"
-            android:layout_marginEnd="50px"
-            android:layout_marginTop="20px"
-            android:gravity="center_vertical"
-            android:visibility="gone">
-
-            <TextView
-                android:id="@+id/textViewDriverReferral"
-                android:layout_width="480px"
-                android:layout_height="48px"
-                android:text="@string/pickup_charges"
-                android:textColor="@color/textColor"
-                android:textSize="34px"/>
-
-
-            <TextView
-                android:id="@+id/textViewDriverReferralValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:text="00"
-                android:textColor="@color/textColor"
-                android:textSize="34px"/>
-
-        </RelativeLayout>
         <RelativeLayout
             android:visibility="visible"
             android:id="@+id/rlRentalVehicles"
