--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_bid_increment.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_bid_increment.xml
@@ -1,27 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/cvRoot"
-    card_view:cardCornerRadius="3dp"
-    card_view:cardElevation="1dp"
-    card_view:cardBackgroundColor="@color/white">
-    
+
     <TextView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/tvBidVal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minWidth="80dp"
         android:gravity="center"
-        style="@style/TextSmall"
-        android:textColor="@color/textColor"
+        style="@style/ButtonTheme"
         android:padding="8dp"
-        android:background="@drawable/button_white_theme_border"
         tools:text="Rs. 100"
         />
-    
 
-</android.support.v7.widget.CardView>
