--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_bid_request.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_bid_request.xml
@@ -3,11 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
+    android:tag="@string/dont_touch_me"
     android:padding="10dp"
     android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/llPickup"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -25,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:textSize="14sp"
+            android:textColor="@color/text_color"
             android:layout_toEndOf="@+id/ivPickup"
             android:layout_toStartOf="@+id/tvDistance"
             android:text="fgfsgs dfr" />
@@ -34,6 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
+            android:textColor="@color/text_color"
             android:textSize="12sp"
             android:layout_alignParentEnd="true"
             android:text="fgfsgs dfr" />
@@ -53,34 +57,42 @@
         android:id="@+id/llDrop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/text_color"
+        android:layout_gravity="start"
         android:layout_below="@+id/ivDotted"
         android:gravity="center">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="start"
             android:background="@drawable/ic_drop" />
 
         <TextView
             android:id="@+id/tvDrop"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/text_color"
+            android:background=""
+            android:maxLines="2"
+            android:layout_gravity="start"
             android:layout_marginStart="5dp"
             android:textSize="16sp"
-            android:text="dsfsdfsfs fsdffsd" />
+            android:text="dsfsdfsfs flahflahflhd" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/llPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="15dp"
         android:layout_below="@+id/llDrop">
 
         <TextView
             android:id="@+id/tvPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/text_color"
             android:textSize="20sp"
             android:layout_marginStart="14dp"
             android:text="$420"/>
@@ -90,6 +102,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
+            android:textColor="@color/text_color"
             android:layout_marginStart="10dp"
             android:text="(0% commision)"/>
     </LinearLayout>
@@ -101,7 +114,7 @@
         android:text="Accept this for 500"
         android:textColor="@color/white"
         android:textSize="16sp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:textAllCaps="false"
         android:background="@drawable/button_bg_gradient"/>
     <TextView
@@ -109,11 +122,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/text_color"
         android:text="Offer you fare for trip"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/bidValues"
+        android:id="@+id/rvBidValues"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
@@ -124,5 +138,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:padding="10dp"
-        android:text="Skip"/>
+        android:textColor="@color/text_color"
+        android:text="@string/skip"/>
 </LinearLayout>
