--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_bid_request.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_bid_request.xml
@@ -2,9 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:tag="@string/dont_touch_me"
     android:padding="10dp"
+    app:layout_constraintBottom_toBottomOf="parent"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -27,6 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:textSize="14sp"
+            android:singleLine="true"
+            android:ellipsize="end"
             android:textColor="@color/text_color"
             android:layout_toEndOf="@+id/ivPickup"
             android:layout_toStartOf="@+id/tvDistance"
@@ -36,11 +40,11 @@
             android:id="@+id/tvDistance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:textColor="@color/text_color"
-            android:textSize="12sp"
             android:layout_alignParentEnd="true"
-            android:text="fgfsgs dfr" />
+            android:layout_marginStart="5dp"
+            android:text="fgfsgs dfr"
+            android:textColor="@color/text_color"
+            android:textSize="12sp" />
 
     </RelativeLayout>
 
@@ -59,7 +63,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/text_color"
         android:layout_gravity="start"
-        android:layout_below="@+id/ivDotted"
+        android:layout_below="@+id/llPickup"
         android:gravity="center">
 
         <ImageView
@@ -73,7 +77,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/text_color"
-            android:background=""
             android:maxLines="2"
             android:layout_gravity="start"
             android:layout_marginStart="5dp"
