f_info_popup: server controlled

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_initial.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_initial.xml
@@ -14,7 +14,9 @@
         android:layout_height="110px"
         android:layout_alignParentEnd="true"
         android:background="@drawable/new_my_loc_button"
-        android:tag="mwar"/>
+        android:tag="mwar"
+        android:layout_below="@+id/tvTutorialBanner"
+        />
 
 
     <LinearLayout
@@ -97,15 +99,16 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tvIntro"
+        android:id="@+id/tvTutorialBanner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/grey_dark"
-        android:padding="5dp"
+        android:background="@color/themeColor"
+        android:padding="8dp"
         android:gravity="center"
         android:text="@string/tap_for_tutorial"
         android:textColor="@color/white"
         android:tag="@string/dont_touch_me"
         style="@style/TextNormal"
+        android:textStyle="bold"
         />
 </RelativeLayout>
