--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_info_pager.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_info_pager.xml
@@ -24,13 +24,14 @@
             android:id="@+id/viewPagerInfo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingBottom="24dp"
             />
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabDots"
             android:layout_width="match_parent"
             android:layout_height="10dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="16dp"
             android:tag="@string/dont_touch_me"
             app:paddingEnd="4dp"
             app:paddingStart="4dp"
